InternexDev_Sandbox/src/objects/WF_PZZ__c.object
<CustomObject>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name(PZZ01)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_code__c</fullName>
        <label>Postal code(PZZ11)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_ID__c</fullName>
        <defaultValue>&quot;PZZ&quot;</defaultValue>
        <label>Record ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WF_PR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WF_PR</label>
        <referenceTo>WF_PR__c</referenceTo>
        <relationshipLabel>WF_PZZ</relationshipLabel>
        <relationshipName>WF_PZZ</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>WF_PZZ</label>
    <nameField>
        <displayFormat>PZZ-{00000}</displayFormat>
        <label>WF_PZZ Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WF_PZZ</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>